<resources>
    <string name="app_name" translatable="false">ChatOS</string>
    <string name="title" translatable="false">ChatOS</string>
    <string name="image" translatable="false">TODO</string>
    <string name="image_title" translatable="false">TODO</string>
    <string name="login_button" translatable="false">Log In</string>
    <string name="to_register" translatable="false">Don\'t have an account?</string>
    <string name="linkto_register" translatable="false">Click here</string>
    <string name="button" translatable="false">Button</string>
    <string name="BaseUrl" translatable="false">http://10.0.2.2:7225/api/</string>
    <string name="register_name" translatable="false">Enter your Username</string>
    <string name="register_password1" translatable="false">Enter password</string>
    <string name="register_password2" translatable="false">Enter password again</string>
    <string name="register_btn" translatable="false">Register</string>
    <string name="main_logo" translatable="false">Main Logo</string>
    <string name="upload_image" translatable="false">Upload Image</string>
    <string name="image_of_the_user" translatable="false">Image of the contact</string>
    <string name="add_contact_name" translatable="false">Contact Name</string>
    <string name="add_contact_id" translatable="false">Contact id</string>
    <string name="add_contact_server" translatable="false">Contact Server</string>
    <string name="add_contact_title" translatable="false">Add Contact</string>
    <string name="add_contact_button" translatable="false">Save Contact</string>
    <!--chats activity-->
    <string name="type_a_message">Type a message</string>
    <string name="date_time_format">"dd/MM HH:mm"</string>
    <string name="change">Change</string>
    <string name="settings_button">settings button</string>
    <string name="settings">Settings</string>
    <string name="server">Server</string>
    <string name="choose_a_server_address_to_work_with">Choose a server address to work with</string>
    <string name="back_button">Go Back</string>
    <string name="change_server">Change server</string>
    <string name="change_theme">Change Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
</resources>